# intuition-for-propagators-slides

./: .gitignore  .gitmodules  Makefile  abstract.md  add.tex  data61.pdf_tex  notes  propagators.tex
diagrams/: Makefile  cabal.project  cell1.dot  cell2.dot  prop2.dot  propagator-talk-diagrams.cabal  shell.nix
diagrams/src/: Dot.hs  Main.hs
