cabal-version:       >=2.0
name:                propagator-talk-diagrams
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              George Wilson
maintainer:          george@wils.online
category:            Graphics
build-type:          Simple

executable propagator-talk-diagrams
  main-is:
    Main.hs
  build-depends:
    base,
    graphviz,
    dotagrams,
    process ^>= 1.6.5
  hs-source-dirs:
    src
  default-language:
    Haskell2010

